@@ -77,6 +77,8 @@ SCIP_RETCODE SCIPincludePresolMILP(
 #define DEFAULT_MAXFILLINPERSUBST  3         /**< maximal possible fillin for substitutions to be considered */
 #define DEFAULT_MAXSHIFTPERROW     10        /**< maximal amount of nonzeros allowed to be shifted to make space for substitutions */
 #define DEFAULT_DETECTLINDEP       0         /**< should linear dependent equations and free columns be removed? (0: never, 1: for LPs, 2: always) */
+#define DEFAULT_MAXBADGESIZE_SEQ   15000     /**< the max badge size in Probing if PaPILO is executed in sequential mode*/
+#define DEFAULT_MAXBADGESIZE_PAR   -1        /**< the max badge size in Probing if PaPILO is executed in parallel mode*/
 #define DEFAULT_RANDOMSEED         0         /**< the random seed used for randomization of tie breaking */
 #define DEFAULT_MODIFYCONSFAC      0.8       /**< modify SCIP constraints when the number of nonzeros or rows is at most this
                                               *   factor times the number of nonzeros or rows before presolving */
@@ -101,6 +103,8 @@ struct SCIP_PresolData
    int lastnrows;                            /**< the number of rows from the last call */
    int threads;                              /**< maximum number of threads presolving may use (0: automatic) */
    int maxfillinpersubstitution;             /**< maximal possible fillin for substitutions to be considered */
+   int maxbadgesizeseq;                      /**< the max badge size in Probing if PaPILO is called in sequential mode*/
+   int maxbadgesizepar;                      /**< the max badge size in Probing if PaPILO is called in parallel mode */
    int maxshiftperrow;                       /**< maximal amount of nonzeros allowed to be shifted to make space for substitutions */
    int detectlineardependency;               /**< should linear dependent equations and free columns be removed? (0: never, 1: for LPs, 2: always) */
    int randomseed;                           /**< the random seed used for randomization of tie breaking */
@@ -338,7 +342,31 @@ SCIP_DECL_PRESOLEXEC(presolExecMILP)
    if( data->enabledualinfer )
       presolve.addPresolveMethod( uptr( new DualInfer<SCIP_Real>() ) );
    if( data->enableprobing )
+   {
+#if (PAPILO_VERSION_MAJOR>=2 && PAPILO_VERSION_MINOR>=1)
+      Probing<SCIP_Real> *probing = new Probing<SCIP_Real>();
+      if( presolve.getPresolveOptions().runs_sequential() )
+      {
+         probing->set_max_badge_size( data->maxbadgesizeseq );
+      }
+      else
+      {
+         probing->set_max_badge_size( data->maxbadgesizepar );
+      }
+      presolve.addPresolveMethod( uptr( probing ) );
+
+#else
       presolve.addPresolveMethod( uptr( new Probing<SCIP_Real>() ) );
+      if( data->maxbadgesizeseq != DEFAULT_MAXBADGESIZE_SEQ )
+            SCIPverbMessage(scip, SCIP_VERBLEVEL_HIGH, NULL,
+               "   The parameter 'presolving/milp/maxbadgesizeseq' can only be used with PaPILO 2.1.0 or later versions.\n");
+
+      if( data->maxbadgesizepar != DEFAULT_MAXBADGESIZE_PAR )
+         SCIPverbMessage(scip, SCIP_VERBLEVEL_HIGH, NULL,
+               "   The parameter 'presolving/milp/maxbadgesizepar' can only be used with PaPILO 2.1.0 or later versions.\n");
+
+#endif
+   }
    if( data->enabledomcol )
       presolve.addPresolveMethod( uptr( new DominatedCols<SCIP_Real>() ) );
    if( data->enablemultiaggr )
@@ -351,7 +379,7 @@ SCIP_DECL_PRESOLEXEC(presolExecMILP)
    presolve.getPresolveOptions().feastol = SCIPfeastol(scip);
    presolve.getPresolveOptions().epsilon = SCIPepsilon(scip);
 
-   /* adjust output settings of presolve libary */
+   /* adjust output settings of presolve library */
 #ifdef SCIP_PRESOLLIB_ENABLE_OUTPUT
    problem.setName(SCIPgetProbName(scip));
 #else
@@ -847,6 +875,14 @@ SCIP_RETCODE SCIPincludePresolMILP(
          "presolving/" PRESOL_NAME "/hugebound",
          "absolute bound value that is considered too huge for activitity based calculations",
          &presoldata->hugebound, FALSE, DEFAULT_HUGEBOUND, 0.0, SCIP_REAL_MAX, NULL, NULL) );
+
+   SCIP_CALL(SCIPaddIntParam(scip, "presolving/" PRESOL_NAME "/maxbadgesizeseq",
+         "maximal badge size in Probing in PaPILO if PaPILO is executed in sequential mode",
+         &presoldata->maxbadgesizeseq, FALSE, DEFAULT_MAXBADGESIZE_SEQ, -1, INT_MAX, NULL, NULL));
+
+   SCIP_CALL(SCIPaddIntParam(scip, "presolving/" PRESOL_NAME "/maxbadgesizepar",
+         "maximal badge size in Probing in PaPILO if PaPILO is executed in parallel mode",
+         &presoldata->maxbadgesizepar, FALSE, DEFAULT_MAXBADGESIZE_PAR, -1, INT_MAX, NULL, NULL));
 
    SCIP_CALL( SCIPaddBoolParam(scip,
          "presolving/" PRESOL_NAME "/enableparallelrows",
